﻿﻿﻿                     wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.20 (Beta 3)
* Fixed FS#93 — "wxGrid -> Object type unknown in XRC."
* Fixed FS#94 — "Typo in code generation which includes <wx/imaglist.h>."

02-12-2007 Version 3.00.19 (Beta 3)
* Fixed FS#89 — "wxSpinCtrl cannot have negative min/max value."
* Fixed FS#90 — "Can't change the source of a bitmap."
* Fixed FS#91 — "ID's that start with 'wx' are not properly generated."
* MainFrame is updated when a property is changed, even if the object
  doesn't match with the selected object (i.e. sizeritem obj).
^ wxFrame title bar color now using ActiveCaption.

02-01-2007  Version 3.00.18 (Beta 3)
* Undo command of MoveHierarchy (move left) now restores the position of
  the object.
* Fixed FS#86 — "Object-tree context-menu "Copy" command has no effect"
+ Implemented FS#6 — "icons and bitmaps support"
+ Implemented FS#87 — "Run as command-line compiler"

01-19-2007  Version 3.00.17 (Beta 2)
* Fixed bug where dragging on created dialog statusbar was resizing the main
  application window.
* Fixed FS#85 — "required wx/imagelist.h for wxListbook using image files."
  with help from akira.
* Fixed the "relative_path" and "internationalize" properties for code
  generated from the inner template of a macro. This resolves FS#83 and
  FS#84.
^ Changed generation of "minimum_size" and "maximum_size" for wxFrame and
  wxDialog to using SetSizeHints.
+ Added new 'Generate Inherited Class' dialog.
+ Added menu events.
+ Added Toolbar tool events.

01-11-2007 Version 3.00.16 (Beta 2)
* Improved tolerance of wxBitmap properties to old project files.
  This resolves FS#78.
+ Added "kind" property to tools and added "tooltip" and "statusbar"
  properties to the generated XRC.
  This resovles FS#79 — "Toggle buttons on toolbar."
^ Updated the splash screen again.

01-09-2007 Version 3.00.15 (Beta 2)
+ Added new splash screen.